--- a/.env
+++ b/.env
@@ -1,2 +1,7 @@
-SMTP_USER=
-SMTP_PASS=
+PORT=3000
+
+SMTP_USER=''
+SMTP_PASS=''
+
+EMAIL_TO='Cristiana <cristiana@mariacolinho.com>'
+EMAIL_CONTACT_FROM='Contacto Site <site@mariacolinho.pt>'
