--- a/package.json
+++ b/package.json
@@ -1,29 +1,31 @@
 {
-  "name": "vite-vue-typescript-starter",
-  "private": true,
-  "version": "0.0.0",
+  "name": "luk-ms-emails",
+  "version": "1.0.0",
+  "main": "main.ts",
   "type": "module",
   "scripts": {
-    "dev": "nodemon -w src/server -x tsx src/server/main.ts",
-    "start": "NODE_ENV=production tsx src/server/main.ts",
-    "build": "vite build"
+    "start": "build && node dist/main.js",
+    "dev": "nodemon ./api/main.ts",
+    "build": "rm -rf .dist && tsc && cp -r public .dist/public"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": "",
+  "devDependencies": {
+    "@eslint/js": "^9.5.0",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.14.5",
+    "@types/nodemailer": "^6.4.15",
+    "globals": "^15.6.0",
+    "nodemon": "^3.1.3",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.5",
+    "typescript-eslint": "^7.13.1"
   },
   "dependencies": {
     "dotenv": "^16.4.5",
-    "express": "^4.18.2",
-    "tsx": "^4.4.0",
-    "typescript": "^5.3.2",
-    "vite-express": "*",
-    "vue": "^3.3.8"
-  },
-  "devDependencies": {
-    "@types/express": "^4.17.21",
-    "@types/node": "^20.9.3",
-    "@types/nodemailer": "^6.4.15",
-    "@vitejs/plugin-vue": "^4.5.0",
-    "nodemailer": "^6.9.13",
-    "nodemon": "^3.0.1",
-    "vite": "^5.0.2",
-    "vue-tsc": "^1.8.22"
+    "express": "^4.19.2",
+    "nodemailer": "^6.9.13"
   }
 }
